apps/saldo/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: saldo
  name: saldo
  labels:
    app: saldo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: saldo
  template:
    metadata:
      labels:
        app: saldo
    spec:
      nodeSelector:
        role: saldo-runner

      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001

      volumes:
        - name: db
          hostPath:
            path: /home/ubuntu/saldo-data
            type: DirectoryOrCreate
      containers:
        - name: saldo
          image: IMAGES/APP
          imagePullPolicy: Always

          volumeMounts:
            - name: db
              mountPath: /app/data
