apps/saldo/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: saldo
  name: saldo-svc
spec:
  type: ClusterIP
  selector:
    app: saldo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
